--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
         <div class="col s12 m6">
             <div class="card">
                 <div class="card-content">
-                    <span class="right secondary-content">{{ post.date | date: "%-d %b %Y" }}</span>
+                    <span class="right secondary-content blue-text text-darken-4">{{ post.date | date: "%-d %b %Y" }}</span>
                     <span class="card-title">
                         <a href="{{ post.url }}" class="deep-orange-text text-darken-4">
                             {% if post.card.title %}
@@ -18,6 +18,7 @@ title: Home
                             {% endif %}
                         </a>
                     </span>
+                    <p>{{ post.content | strip_html | strip_newlines | truncatewords: 28 }}</p>
                 </div>
             </div>
         </div>
