--- a/index.html
+++ b/index.html
@@ -1,51 +1,71 @@
----
-layout: default
-title: Home
----
+<!DOCTYPE html>
+<html lang="en" class="h-full">
 
-<div class="row">
-    {% for post in paginator.posts %}
-        <div class="col s12 m6">
-            <div class="card">
-                <div class="card-content">
-                    <span class="right secondary-content blue-text text-darken-4">{{ post.date | date: "%-d %b %Y" }}</span>
-                    <span class="card-title">
-                        <a href="{{ post.url }}" class="deep-orange-text text-darken-4">
-                            {% if post.card.title %}
-                                {{ post.card.title }}
-                            {% else %}
-                                {{ post.title }}
-                            {% endif %}
-                        </a>
-                    </span>
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rens Admiraal &middot; East west, CLI best</title>
+</head>
+
+<body class="h-full">
+    <main class="min-h-full bg-cover bg-top sm:bg-top" style="background-image: url('src/bg.jpg')">
+        <div class="max-w-7xl mx-auto px-4 py-16 text-center sm:px-6 sm:py-24 lg:px-8 lg:py-48">
+        </div>
+    </main>
+    <footer class="bg-gray-800" aria-labelledby="footer-heading">
+        <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
+            <div class="text-sm text-gray-400">
+                Rens Admiraal BV<br />
+                Goudsbloemstraat 1<br />
+                6871 WB Renkum<br />
+                69908265<br />
+                NL858061491B01<br />
+                NL08BUNQ2043860828<br />
+            </div>
+
+            <div class="mt-8 border-t border-gray-700 pt-8 md:flex md:items-center md:justify-between">
+                <div class="flex space-x-6 md:order-2">
+                    <a href="https://nl.linkedin.com/in/rensadmiraal" class="text-gray-400 hover:text-gray-300">
+                        <span class="sr-only">LinkedIn</span>
+                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 448 512">
+                            <path
+                                d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
+                        </svg>
+                    </a>
+
+                    <a href="https://twitter.com/renst3" class="text-gray-400 hover:text-gray-300">
+                        <span class="sr-only">Twitter</span>
+                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path
+                                d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
+                        </svg>
+                    </a>
+
+                    <a href="https://github.com/radmiraal" class="text-gray-400 hover:text-gray-300">
+                        <span class="sr-only">GitHub</span>
+                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </a>
+
+                    <a href="https://keybase.io/radmiraal" class="text-gray-400 hover:text-gray-300">
+                        <span class="sr-only">Keybase</span>
+                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 448 512">
+                            <path
+                                d="M286.17 419a18 18 0 1 0 18 18 18 18 0 0 0-18-18zm111.92-147.6c-9.5-14.62-39.37-52.45-87.26-73.71q-9.1-4.06-18.38-7.27a78.43 78.43 0 0 0-47.88-104.13c-12.41-4.1-23.33-6-32.41-5.77-.6-2-1.89-11 9.4-35L198.66 32l-5.48 7.56c-8.69 12.06-16.92 23.55-24.34 34.89a51 51 0 0 0-8.29-1.25c-41.53-2.45-39-2.33-41.06-2.33-50.61 0-50.75 52.12-50.75 45.88l-2.36 36.68c-1.61 27 19.75 50.21 47.63 51.85l8.93.54a214 214 0 0 0-46.29 35.54C14 304.66 14 374 14 429.77v33.64l23.32-29.8a148.6 148.6 0 0 0 14.56 37.56c5.78 10.13 14.87 9.45 19.64 7.33 4.21-1.87 10-6.92 3.75-20.11a178.29 178.29 0 0 1-15.76-53.13l46.82-59.83-24.66 74.11c58.23-42.4 157.38-61.76 236.25-38.59 34.2 10.05 67.45.69 84.74-23.84.72-1 1.2-2.16 1.85-3.22a156.09 156.09 0 0 1 2.8 28.43c0 23.3-3.69 52.93-14.88 81.64-2.52 6.46 1.76 14.5 8.6 15.74 7.42 1.57 15.33-3.1 18.37-11.15C429 443 434 414 434 382.32c0-38.58-13-77.46-35.91-110.92zM142.37 128.58l-15.7-.93-1.39 21.79 13.13.78a93 93 0 0 0 .32 19.57l-22.38-1.34a12.28 12.28 0 0 1-11.76-12.79L107 119c1-12.17 13.87-11.27 13.26-11.32l29.11 1.73a144.35 144.35 0 0 0-7 19.17zm148.42 172.18a10.51 10.51 0 0 1-14.35-1.39l-9.68-11.49-34.42 27a8.09 8.09 0 0 1-11.13-1.08l-15.78-18.64a7.38 7.38 0 0 1 1.34-10.34l34.57-27.18-14.14-16.74-17.09 13.45a7.75 7.75 0 0 1-10.59-1s-3.72-4.42-3.8-4.53a7.38 7.38 0 0 1 1.37-10.34L214 225.19s-18.51-22-18.6-22.14a9.56 9.56 0 0 1 1.74-13.42 10.38 10.38 0 0 1 14.3 1.37l81.09 96.32a9.58 9.58 0 0 1-1.74 13.44zM187.44 419a18 18 0 1 0 18 18 18 18 0 0 0-18-18z" />
+                        </svg>
+                    </a>
                 </div>
+                <p class="mt-8 text-xs text-gray-400 md:mt-0 md:order-1">&copy; 2020 Rens Admiraal BV, All rights
+                    reserved.</p>
             </div>
         </div>
-    {% endfor %}
-</div>
+    </footer>
 
-<div class="containter">
-    <ul class="pagination center-align teal-text">
-        {% if paginator.previous_page %}
-            <li class="waves-effect">
-                <a href="{{ paginator.previous_page_path }}" class="deep-orange-text text-darken-4">
-                    <i class="material-icons">chevron_left</i>
-                </a>
-            </li>
-        {% else %}
-            <li><i class="material-icons grey-text">chevron_left</i></li>
-        {% endif %}
+    <script type="module" src="/src/main.ts"></script>
+</body>
 
-        <li class="page_number black-text">{{ paginator.page }} of {{ paginator.total_pages }}</li>
-
-        {% if paginator.next_page %}
-            <li class="waves-effect">
-                <a href="{{ paginator.next_page_path }}" class="deep-orange-text text-darken-4">
-                    <i class="material-icons">chevron_right</i>
-                </a>
-            </li>
-        {% else %}
-            <li><i class="material-icons grey-text">chevron_right</i></li>
-        {% endif %}
-    </ul>
-</div>
+</html>
