tweak: Resize background image

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Rens Admiraal &middot; East west, CLI best</title>
 </head>
 
-<body class="h-full">
-    <main class="min-h-full bg-cover bg-top sm:bg-top" style="background-image: url('src/bg.jpg')">
+<body class="h-full flex flex-col justify-between bg-slate-100">
+    <main class="bg-cover bg-center h-96" style="background-image: url('src/bg.jpg')">
         <div class="max-w-7xl mx-auto px-4 py-16 text-center sm:px-6 sm:py-24 lg:px-8 lg:py-48">
         </div>
     </main>
