html: Use definition list for company data

--- a/index.html
+++ b/index.html
@@ -15,14 +15,31 @@
     </main>
     <footer class="bg-gray-800" aria-labelledby="footer-heading">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
-            <div class="text-sm text-gray-400">
-                Rens Admiraal BV<br />
-                Goudsbloemstraat 1<br />
-                6871 WB Renkum<br />
-                69908265<br />
-                NL858061491B01<br />
-                NL08BUNQ2043860828<br />
-            </div>
+            <dl class="text-sm text-gray-400 space-y-1.5">
+                <div>
+                    <dt class="sr-only">Company name:</dt>
+                    <dl>Rens Admiraal BV</dl>
+                </div>
+                <div>
+                    <dt class="sr-only">Address:</dt>
+                    <dl>
+                        Goudsbloemstraat 1<br />
+                        6871 WB Renkum
+                    </dl>
+                </div>
+                <div>
+                    <dt class="sr-only">Chamber of commerce:</dt>
+                    <dl>69908265</dl>
+                </div>
+                <div>
+                    <dt class="sr-only">VAT Id</dt>
+                    <dl>NL858061491B01</dl>
+                </div>
+                <div>
+                    <dt class="sr-only">IBAN</dt>
+                    <dl>NL08BUNQ2043860828</dl>
+                </div>
+            </dl>
 
             <div class="mt-8 border-t border-gray-700 pt-8 md:flex md:items-center md:justify-between">
                 <div class="flex space-x-6 md:order-2">
