design: Change header image size

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Rens Admiraal &middot; East west, CLI best</title>
 </head>
 
-<body class="h-full flex flex-col justify-between bg-slate-100">
-    <main class="bg-cover bg-center h-96" style="background-image: url('src/bg.jpg')">
-        <div class="max-w-7xl mx-auto px-4 py-16 text-center sm:px-6 sm:py-24 lg:px-8 lg:py-48">
-        </div>
+<body class="h-full flex flex-col bg-slate-100 justify-between">
+    <main class="w-full max-w-7xl mx-auto h-full xl:max-h-96">
+        <img src="src/bg.jpg" class="min-w-full min-h-full object-cover" />
     </main>
+
     <footer class="bg-gray-800" aria-labelledby="footer-heading">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
             <dl class="text-sm text-gray-400 space-y-1.5">
