ui: Add tag cloud

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="flex h-full flex-col bg-zinc-50 dark:bg-black">
-    <div class="fixed inset-0 flex justify-center sm:px-8">
+    <div class="fixed inset-0 flex justify-center">
         <div class="flex w-full max-w-7xl lg:px-8">
             <div class="w-full bg-white ring-1 ring-zinc-100 dark:bg-zinc-900 dark:ring-zinc-300/20"></div>
         </div>
@@ -65,6 +65,29 @@
                             style="color: transparent" />
                     </div>
                 </div>
+            </div>
+            <div class="h-8"></div>
+            <div class="my-8 p-4 px-8 max-w-lg mx-auto opacity-30">
+                <ul class="pl-0 flex flex-wrap align-center justify-center leading-10">
+                    <li class="text-2xl text-zinc-300 block py-0.5 px-1">JavaScript</li>
+                    <li class="text-4xl text-zinc-100 block py-0.5 px-1">PHP</li>
+                    <li class="text-3xl text-zinc-200 block py-0.5 px-1">Windows</li>
+                    <li class="text-2xl text-zinc-300 block py-0.5 px-1">HTML</li>
+                    <li class="text-3xl text-zinc-200 block py-0.5 px-1">Docker</li>
+                    <li class="text-4xl text-zinc-100 block py-0.5 px-1">Agile</li>
+                    <li class="text-2xl text-zinc-300 block py-0.5 px-1">MySQL</li>
+                    <li class="text-3xl text-zinc-200 block py-0.5 px-1">Filemaker</li>
+                    <li class="text-4xl text-zinc-100 block py-0.5 px-1">API's</li>
+                    <li class="text-2xl text-zinc-300 block py-0.5 px-1">Mac OS</li>
+                    <li class="text-3xl text-zinc-200 block py-0.5 px-1">PostgreSQL</li>
+                    <li class="text-4xl text-zinc-100 block py-0.5 px-1">Ansible</li>
+                    <li class="text-3xl text-zinc-200 block py-0.5 px-1">VueJS</li>
+                    <li class="text-2xl text-zinc-300 block py-0.5 px-1">MariaDB</li>
+                    <li class="text-3xl text-zinc-200 block py-0.5 px-1">CSS</li>
+                    <li class="text-2xl text-zinc-300 block py-0.5 px-1">Tailwind CSS</li>
+                    <li class="text-3xl text-zinc-200 block py-0.5 px-1">Kubernetes</li>
+                    <li class="text-4xl text-zinc-100 block py-0.5 px-1">Linux</li>
+                </ul>
             </div>
         </main>
 
